# Blockchain-web-3-learning

./: .gitmodules  README.md
Anchor/first-testing/: Anchor.toml  tsconfig.json
Bonk_bot/backend/: index.ts  model.ts  package.json
Bonk_bot/client/: package-lock.json
EVM Bridge/script/: BridgeEth.sol  USDT.sol  WUSDT.sol
Eth client/: package-lock.json  package.json
Eth client/src/: App.tsx  config.ts
bridge/backend/: index.ts  package.json
bridge/frontend/: abi.ts  config.ts  package-lock.json  package.json  vite.config.ts
bridge/src/: BridgeBase.sol  BridgeETH.sol  Wkaif.sol  bridge.sol  kaif.sol
bridge/test/: Bridge.t.sol
crud_contract/anchor/: Anchor.toml
eth-end-to-end/backend/: config.ts  index.ts  package.json
eth-end-to-end/db/: init.sql
eth-wagmi-wallet-adapter/: index.html  package-lock.json  package.json
eth-wagmi-wallet-adapter/src/: App.tsx
foundry/src/: Counter.sol  MYToken.sol
foundry/test/: Counter.t.sol  MyToken.t.sol
hello_template/: package-lock.json  package.json
hello_template/src/: Contract.sol  Counter.sol  MyToken.sol
hello_template/test/: Counter.t.sol  MyToken.t.sol
orca-contract/: package-lock.json  package.json
orca-contract/src/: Contract.sol
orca-contract/test/: Contract.t.sol
rust/borsh/: Cargo.toml
rust/four/: Cargo.toml
rust/native program/native-counter/: Cargo.toml
rust/native program/native-counter/src/: lib.rs
week_02/: README.md  index.ts  index2.ts  package.json  testing.ts
week_05/: package-lock.json  package.json
week_06/: package-lock.json  package.json  vite.config.ts
(+69 files in other folders)
